--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint-config-rallycoding": "^3.2.0",
     "expo": "^24.0.0",
     "firebase": "^4.8.0",
+    "lodash": "^4.17.4",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
     "react-native-elements": "^0.18.5",
